feature: ruta de sincronizacion de entidaddes a un subsystem
