# app/Http/Requests/Subsystem/UpdateSubsystemEntityLinkRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Subsystem;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateSubsystemEntityLinkRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'entities' => 'required|array|min:1',
+            'entities.*.entity_type' => 'required|string|in:head_office,department,career',
+            'entities.*.entity_ids' => 'required|array',
+            'entities.*.entity_ids.*' => 'uuid'
+        ];
+    }
+}
